--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ baseurl: ''
 profilepic: '/images/tzuehlke.jpg'
 bkimage: '/images/bk1.jpg'
 google_analytics: UA-XXXXXX-X
-font_awesome: 'https://kit.fontawesome.com/53d7a3a62b.js'
+font_awesome: '53d7a3a62b.js'
 
 author:
   name: 'Thomas Zühlke'
